run.log
2023-04-20 07:08:09,570:[critical]	./LimbusLocalize/Localize/CN/CN_AbEvents_Mirror.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 154, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 101, in transform
    for q in h.keys():
AttributeError: 'str' object has no attribute 'keys'

2023-04-20 07:08:09,778:[critical]	./LimbusLocalize/Localize/CN/CN_NickName.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 154, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 89, in transform
    if len(data[keys[0]]["dataList"]) == len(data[keys[1]]["dataList"]) == len(data[keys[-1]]["dataList"]) == len(data[keys[-2]]["dataList"]):
KeyError: 'dataList'

2023-04-20 07:08:10,739:[ERROR]	./LimbusLocalize/Localize/CN/StoryData/CN_S101B.json load error
2023-04-20 07:08:10,741:[critical]	./LimbusLocalize/Localize/CN/StoryData/CN_S101B.json
	Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 78, in fetch_json
    fin[i] = json.load(f)
  File "/usr/lib/python3.10/json/__init__.py", line 293, in load
    return loads(fp.read(),
  File "/usr/lib/python3.10/json/__init__.py", line 346, in loads
    return _default_decoder.decode(s)
  File "/usr/lib/python3.10/json/decoder.py", line 337, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
  File "/usr/lib/python3.10/json/decoder.py", line 353, in raw_decode
    obj, end = self.scan_once(s, idx)
json.decoder.JSONDecodeError: Invalid control character at: line 9 column 27 (char 126)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 154, in main
    last = check(merge(transform(fetch_json(i))), last)
  File "/home/runner/work/Limbus-Company-Work-Dataset/Limbus-Company-Work-Dataset/run.py", line 82, in fetch_json
    fin[i] = eval(f.read())
  File "<string>", line 9
    "place": "梅菲斯托费勒斯 内部
             ^
SyntaxError: unterminated string literal (detected at line 9)

